--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "npx @biomejs/biome check --write ."
     },
     "dependencies": {
+        "@google/generative-ai": "^0.24.1",
         "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-checkbox": "^1.3.3",
         "@radix-ui/react-label": "^2.1.7",
