--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "npx @biomejs/biome check --write ."
     },
     "dependencies": {
+        "@auth/prisma-adapter": "^2.10.0",
         "@google/generative-ai": "^0.24.1",
         "@prisma/client": "^6.16.3",
         "@radix-ui/react-avatar": "^1.1.10",
@@ -19,11 +20,13 @@
         "@radix-ui/react-separator": "^1.1.7",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tabs": "^1.1.13",
+        "bcrypt": "^6.0.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "lucide-react": "^0.540.0",
         "next": "15.4.7",
+        "next-auth": "^4.24.11",
         "react": "19.1.0",
         "react-day-picker": "^9.9.0",
         "react-dom": "19.1.0",
