--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
         "lint": "npx @biomejs/biome check --write ."
     },
     "dependencies": {
-        "@auth/prisma-adapter": "^2.10.0",
         "@google/generative-ai": "^0.24.1",
+        "@next-auth/prisma-adapter": "^1.0.7",
         "@prisma/client": "^6.16.3",
         "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-checkbox": "^1.3.3",
@@ -24,6 +24,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
+        "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.540.0",
         "next": "15.4.7",
         "next-auth": "^4.24.11",
@@ -35,6 +36,8 @@
     "devDependencies": {
         "@biomejs/biome": "2.2.0",
         "@tailwindcss/postcss": "^4",
+        "@types/bcrypt": "^6.0.0",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
