--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - "3000:3000"
     env_file:
       - .env
-      - .env.local
+    environment:
+      NODE_ENV: production
     volumes:
+      - .:/app
       - /app/node_modules
